# TPC

./: CMakeLists.txt  main.cpp
gestures/P/: 0LK0e1.txt  4cBWDx.txt  MFSv8k.txt  OXpPIh.txt  S22Jjz.txt  V41mtz.txt  cCHryD.txt  fa37Jn.txt  hMaiRr.txt  rO72tK.txt  sbzayy.txt  xlYvKW.txt  zLOZ2n.txt
gestures/beugen/: 0LK0e1.txt  4cBWDx.txt  MFSv8k.txt  OXpPIh.txt  P07U20.txt  S22Jjz.txt  V41mtz.txt  cCHryD.txt  fa37Jn.txt  hMaiRr.txt  o0J90x.txt  rO72tK.txt  sbzayy.txt  xlYvKW.txt  zLOZ2n.txt
gestures/vor/: 0LK0e1.txt  4cBWDx.txt  S22Jjz.txt  V41mtz.txt  cCHryD.txt  fa37Jn.txt  hMaiRr.txt  rO72tK.txt  sbzayy.txt  xlYvKW.txt  zLOZ2n.txt
gestures/wink/: 0LK0e1.txt  4cBWDx.txt  S22Jjz.txt  V41mtz.txt  cCHryD.txt  fa37Jn.txt  hMaiRr.txt  rO72tK.txt  sbzayy.txt  xlYvKW.txt
tpcLibrary/: CMakeLists.txt  CMakeLists_old.txt
tpcLibrary/include/: Point3D.h  call_tpc.h  conceptual_space.h  izhikevich_neuron.h  lif_neuron.h  record_standalone.h  tpc_synapse.h  tpcmatrix.h  visualize.h
tpcLibrary/src/: call_tpc.cpp
